# PocketRag

./: LICENSE  README.md  pyproject.toml  requirements.txt
pocketrag/: __init__.py  cli.py
pocketrag/config/: __init__.py  settings.py
pocketrag/core/: __init__.py  chat.py  chunker.py  embedding.py  indexer.py  search.py  vector_store.py
pocketrag/utils/: __init__.py  document_loader.py
